src/test/ui/codemap_tests/one_line.nll.stderr
error[E0499]: cannot borrow `v` as mutable more than once at a time
  --> $DIR/one_line.rs:13:12
   |
LL |     v.push(v.pop().unwrap()); //~ ERROR cannot borrow
   |     -------^----------------
   |     |      |
   |     |      second mutable borrow occurs here
   |     first mutable borrow occurs here
   |     borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
